--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@babel/cli": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
     "flow-bin": "^0.105.2"
   }
 }
